--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,11 @@ description: >-
   My name is Jérôme Laban, I'm a Software Architect from Montreal, working
   on mostly .NET and C#, with Windows, Xamarin and WebAssembly. I'm the
   CTO of the open source Uno Platform.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://jaylee.org" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: ""
+url: "https://jaylee.org"
 twitter_username: jlaban
 github_username:  jeromelaban
+google_analytics: UA-300089-2
 
 show_excerpts: true
 excerpt_separator: <!-- more -->
