Update intro to include MVP

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Jerome Laban's Blog
 description: >-
   My name is Jérôme Laban, I'm a Software Architect from Montreal, working
   on mostly .NET and C#, with Windows, Xamarin and WebAssembly. I'm the
-  CTO of the open source Uno Platform.
+  CTO of the open source Uno Platform. MVP 2009-2011;2020
 baseurl: ""
 url: "https://jaylee.org"
 twitter_username: jlaban
